--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:title" content="茶屋町祭実行委員会(大阪工業大学 梅田キャンパス">
     <meta property="og:type" content="school">
     <meta property="og:url" content="index.html">
-    <meta property="og:image" content="img/Top.jpg">
+    <meta property="og:image" content="img/Top.JPG">
     <meta property="og:description" content="茶屋町祭実行委員会のHPです。皆様の参加をお待ちしております。">
 
     <title>茶屋町祭実行委員会(大阪工業大学 梅田キャンパス)</title>
