--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
         <div  class="box1 col">
           <div class="sss">
-            <div class="row"><img src="img/" alt="画像が見つかりません。" width=200px></div>
+            <div class="row img-center"><img src="img/" alt="画像が見つかりません。" width=200px></div>
             <div class="row">
               <p class="midasi">ゲスト</p>
               <p>ゲストでは、当日にゲストを迎えるための運営を担当しています。<br></p></div>
