--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <p class="midasi">部署紹介</p>
 
         <div class="box1 col">
-          <div class="sss">
+          <div class="box-1">
             <div class="row"><img src="img/publicrelations.png" width=200px></div>
             <div class="row">
               <p class="midasi">広報</p>
@@ -111,7 +111,7 @@
         </div>
 
         <div  class="box1 col">
-          <div class="sss">
+          <div class="box-1">
             <div class="row"><img src="img/shougai.png" width=200px></div>
             <div class="row">
               <p class="midasi">渉外</p>
@@ -121,7 +121,7 @@
         </div>
 
         <div  class="box1 col">
-          <div class="sss">
+          <div class="box-1">
             <div class="row"><img src="img/shonai.png" width=200px></div>
             <div class="row">
               <p class="midasi">渉内</p>
@@ -131,7 +131,7 @@
         </div>
 
         <div  class="box1 col">
-          <div class="sss">
+          <div class="box-1">
             <div class="row"><img src="img/" alt="画像が見つかりません。" width=200px></div>
             <div class="row">
               <p class="midasi">装飾</p>
@@ -142,7 +142,7 @@
         </div>
 
         <div  class="box1 col">
-          <div class="sss">
+          <div class="box-1">
             <div class="row img-center"><img src="img/" alt="画像が見つかりません。" width=200px></div>
             <div class="row">
               <p class="midasi">ゲスト</p>
@@ -156,16 +156,18 @@
       <section id="1kari">
         <p class="midasi">仮入部</p>
         <div class="clip-box-a font1">
-          現在、新入生の仮入部登録を受け付けています。<br>
+          <p>現在、新入生の仮入部登録を受け付けています。<br>
             仮入部完了後、随時オープンチャットにご招待いたします。<br>
             「仮入部＝本入部」ではございません。<br>
             「部活何にしよう？」「きになるなぁ」という方は是非登録してください。
+          </p>
         </div>
-        </p>
         <div class="center">
           <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=wIljY1y5KEi5j_n8uNk4Oond76orTc5NpazXplcqlmdUN0ZINjBaVVpZRzdEVEJKWVlBNEhLMVdWOS4u" class="btn2-square-pop">仮入部は<br>こちら‼</a>
         </div>
-
+        <div class="chyui">
+          <p>注.仮入部登録には、大学の組織アカウントが必要です。</p>
+        </div>
       </section>
     </main>
 
