--- a/index.html
+++ b/index.html
@@ -159,13 +159,13 @@
               <p class="midasi">仮入部</p>
               <div class="clip-box-a font1">
                 <p>現在、新入生の仮入部登録を受け付けています。<br>
-                  仮入部完了後、随時オープンチャットにご招待いたします。<br>
+                  仮入部完了後、随時大学のメールに招待QRコードを送信させていただきます。。<br>
                   「仮入部＝本入部」ではございません。<br>
                   「部活何にしよう？」「きになるなぁ」という方は是非登録してください。
                 </p>
               </div>
               <div class="center">
-                <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=wIljY1y5KEi5j_n8uNk4Oond76orTc5NpazXplcqlmdUN0ZINjBaVVpZRzdEVEJKWVlBNEhLMVdWOS4u" class="btn2-square-pop">仮入部は<br>こちら‼</a>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSfjBfOftpKHdOCKSVAiMqqFRshKGC8AHnGW19oq3TqL73o74w/viewform" class="btn2-square-pop">仮入部は<br>こちら‼</a>
               </div>
               <div class="chyui">
                 <p>注.仮入部登録には、大学の組織アカウントが必要です。</p>
