--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
             <div  class="box1 col">
               <div class="box-1">
-                <div class="row"><img src="img/" alt="画像が見つかりません。" width=200px></div>
+                <div class="row"><img src="img/no_img.jpg" alt="画像が見つかりません。" width=200px></div>
                 <div class="row">
                   <p class="midasi">装飾</p>
                   <p>装飾では、学園祭の飾り付けとWebサイトの作成を担当しています。<br></p>
@@ -145,7 +145,7 @@
 
             <div  class="box1 col">
               <div class="box-1">
-                <div class="row img-center"><img src="img/" alt="画像が見つかりません。" width=200px></div>
+                <div class="row img-center"><img src="img/no_img.jpg" alt="画像が見つかりません。" width=200px></div>
                 <div class="row">
                   <p class="midasi">ゲスト</p>
                   <p>ゲストでは、当日にゲストを迎えるための運営を担当しています。<br></p></div>
