--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
               <p class="midasi">仮入部</p>
               <div class="clip-box-a font1">
                 <p>現在、新入生の仮入部登録を受け付けています。<br>
-                  仮入部完了後、随時大学のメールに招待QRコードを送信させていただきます。。<br>
+                  仮入部完了後、随時大学のメールに招待QRコードを送信させていただきます。<br>
                   「仮入部＝本入部」ではございません。<br>
                   「部活何にしよう？」「きになるなぁ」という方は是非登録してください。
                 </p>
